# termux-reimagined-Termux-Fork-

./: .gitignore  AATP2_FIX_GUIDE.md  GEMINI.md
.github/workflows/: attach_debug_apks_to_release.yml  ci.yml  cli-ci.yml  cli-publish.yml  codeql.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/termux/app/: TermuxActivity.java
app/src/main/java/com/termux/app/activities/: ControlCenterActivity.java  MacroManagerActivity.java
app/src/main/java/com/termux/app/terminal/: TermuxSessionsListViewController.java  TermuxTerminalSessionActivityClient.java  TermuxTerminalViewClient.java
app/src/main/java/com/termux/app/terminal/io/: TermuxTerminalExtraKeys.java
app/src/main/res/layout/: activity_control_center.xml  activity_macro_manager.xml  activity_termux.xml  view_session_overlay.xml
app/src/main/res/values/: colors.xml  styles.xml  themes.xml
cli/: Cargo.toml  README.md  Windows.h  package.json
cli/src/: main.rs
cli/src/compiler/: mod.rs
termux-shared/src/main/java/com/termux/shared/termux/terminal/io/: TerminalExtraKeys.java
termux-shared/src/main/res/layout/: partial_primary_toolbar.xml
