[package]
name = "lnw-cli"
version = "0.1.0"
edition = "2021"
description = "Linux-on-Windows Command Line Interface"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Console",
] }
thiserror = "1.0"
anyhow = "1.0"
